Updating logger and adding Test modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore these files/folders:
 .env
 env
-Modules/__pycache__
+__pycache__
 Screenshots
 
 # Ignore files in Data folder except .gitkeep
