Adding to dotenv_path to __init__

--- a/Settings/config.json
+++ b/Settings/config.json
@@ -1,6 +1,7 @@
 {
     "path_dir": {
-        "data": "Data/"
+        "data": "Data/",
+        "key": ".env"
     },
     "logging": {
         "level": "INFO",
